[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "piper-train"
version = "1.12.0"
description = "A fast and local neural text to speech system"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "numpy<2.3",
    "piper-plus-g2p",
]

[project.optional-dependencies]
train = [
    "scipy>=1.12",
    "librosa>=0.10",
    "soundfile>=0.12",
    "pytorch-lightning>=2.0",
    "torchmetrics>=1.0",
    "transformers>=4.38",
    "onnx>=1.21.0",
    # Issue #372: floor must be >= C++ canonical (cmake/OnnxRuntime.cmake)
    "onnxruntime>=1.20.0",
    "pyopenjtalk-plus",
    "mecab-python3>=1.0",
    "unidic-lite>=1.0",
    "g2p-en>=2.1.0",
    "tensorboard>=2.16",
    "wandb>=0.16",
    "tqdm>=4.66",
    "einops>=0.7",
    "numba>=0.59",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "pyyaml>=6.0",
    "onnxsim-prebuilt",
    "onnxscript>=0.6.2",
    "piper-plus-g2p[all]",
]

inference = [
    # Issue #372: floor must be >= C++ canonical (cmake/OnnxRuntime.cmake)
    "onnxruntime>=1.20.0",
    "soundfile>=0.12",
    "piper-plus-g2p[all]",
    "fastapi>=0.110",
    "uvicorn>=0.27",
]

inference-gpu = [
    # Issue #372: floor must be >= C++ canonical (cmake/OnnxRuntime.cmake)
    "onnxruntime-gpu>=1.20.0",
    "soundfile>=0.12",
    "piper-plus-g2p[all]",
    "fastapi>=0.110",
    "uvicorn>=0.27",
]

test = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "pytest-xdist>=3.5",
    "pytest-timeout>=2.2",
    "pytest-mock>=3.12",
    "coverage[toml]>=7.6",
    "ruff>=0.12",
    "mypy>=1.7",
    "types-requests>=2.31",
    "types-PyYAML>=6.0",
    "psutil>=5.9",
]

[project.scripts]
piper-train = "piper_train.__main__:main"

[tool.setuptools.package-data]
piper_train = ["VERSION"]

[tool.setuptools.packages.find]
where = ["."]
include = ["piper_train*"]

# -----------------------------------------------------------------------------
# mypy configuration (piper_train)
# -----------------------------------------------------------------------------
# 段階的型付け: ignore_missing_imports でサードパーティ stub 不在を許容。
# strict は M2-M3 で逐次有効化予定。
[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = true
warn_return_any = true
warn_redundant_casts = true
warn_unused_configs = true
files = ["piper_train"]

[[tool.mypy.overrides]]
module = "torch.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pytorch_lightning.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "onnxruntime.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "onnx.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "librosa.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pyopenjtalk.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "g2p_en.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pypinyin.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "g2pk2.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "wandb.*"
ignore_missing_imports = true

# テストは段階的に厳密化 (現状は緩和)
[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true
