[workspace]
members = ["piper-g2p", "piper-core", "piper-cli", "piper-python"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
license = "MIT"
authors = ["ayousanz"]
repository = "https://github.com/ayutaz/piper-plus"
homepage = "https://github.com/ayutaz/piper-plus"
keywords = ["tts", "text-to-speech", "piper", "onnx", "vits"]
categories = ["multimedia::audio"]
