[workspace]
members = ["piper-plus-g2p", "piper-core", "piper-cli", "piper-python", "piper-wasm"]
# `piper-plus-g2p/fuzz` is a cargo-fuzz crate that depends on libfuzzer-sys
# (requires nightly + libFuzzer runtime) and is not buildable on stable.
# Keeping it out of the workspace prevents `cargo build --workspace` /
# `cargo metadata` from pulling it in for routine CI lanes; it is still
# built explicitly by the fuzz workflow via `cargo +nightly fuzz`.
exclude = ["piper-plus-g2p/fuzz"]
resolver = "2"

# Workspace-wide lint policy (Rust 1.74+ via [workspace.lints]).
#
# These defaults apply only to member crates that opt in with
# `[lints] workspace = true` in their own Cargo.toml. We are introducing
# this gradually, so member crates currently keep their existing lint
# config; flipping individual crates to workspace inheritance is tracked
# as follow-up work. CI does not yet pass `-D warnings`, so the levels
# below are warnings only. Promote to `deny` per crate (or globally) as
# violations are cleaned up.
[workspace.lints.clippy]
# 段階的導入: pedantic/nursery/cargo は CI の `-D warnings` と同居すると
# 既存コードに大量の error が発生するため、まずは allow にして個別 enable
# 方針 (Wave 後段で specific lint を warn 化)。
pedantic = { level = "allow", priority = -1 }
nursery = { level = "allow", priority = -1 }
cargo = { level = "allow", priority = -1 }
# 重要だが既存コードに violation が多いため warn (CI で error にはしない)
unwrap_used = "allow"
expect_used = "allow"
panic = "allow"
todo = "warn"
unimplemented = "warn"

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "warn"
# missing_docs / rust_2018_idioms は既存コードに大量 violation あり、
# 別 PR で段階導入する。
missing_docs = "allow"
rust_2018_idioms = { level = "allow", priority = -1 }

[workspace.package]
version = "0.5.0"
edition = "2024"
rust-version = "1.88"
license = "MIT"
authors = ["ayousanz"]
repository = "https://github.com/ayutaz/piper-plus"
homepage = "https://github.com/ayutaz/piper-plus"
keywords = ["tts", "text-to-speech", "piper", "onnx", "vits"]
categories = ["multimedia::audio"]

# NOTE: wasm-pack build --release uses [profile.release], not custom named profiles.
# WASM-specific post-build optimization (wasm-opt) is configured in
# piper-wasm/Cargo.toml via [package.metadata.wasm-pack.profile.release].
# We intentionally do NOT set opt-level = 'z' or lto here, because
# [profile.release] applies to ALL workspace crates (cli, python, etc.)
# and 'z' would degrade runtime performance for non-WASM targets.
